# fastmcp-guard

./: .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
blog/: 01-ops-layer-for-fastmcp.md  02-static-api-keys-mcp.md
docs/: audit.md  backends.md  cli.md  index.md  ip-policy.md  keys.md  mkdocs.yml  quickstart.md  rate-limiting.md
examples/: basic.py  per_tool_rate_limit.py
examples/demo/: README.md  client.py  server.py
examples/walkthrough/: WALKTHROUGH.md  demo.py  poc_client.py  poc_server.py  server.py
src/fastmcp_guard/: __init__.py  cli.py  guard.py  middleware.py
src/fastmcp_guard/audit/: __init__.py  log.py
src/fastmcp_guard/audit/backends/: file.py  http.py  sqlite.py
src/fastmcp_guard/ip/: __init__.py  policy.py
src/fastmcp_guard/keys/: __init__.py  models.py  store.py  verifier.py
src/fastmcp_guard/keys/backends/: base.py  memory.py  sqlite.py
src/fastmcp_guard/rate/: __init__.py  decorator.py  limiter.py
tests/: test_audit.py  test_http_integration.py  test_ip.py  test_keys.py  test_middleware.py  test_rate.py  test_store_backends.py  test_verifier.py
