[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-guard"
version = "0.1.0"
description = "Production operations layer for FastMCP — API key management, rate limiting, and audit logging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rohan" }]
keywords = ["mcp", "fastmcp", "auth", "api-keys", "rate-limiting", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
redis = ["redis[hiredis]>=5.0"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
fastmcp-guard = "fastmcp_guard.cli:app"

[project.urls]
Homepage = "https://github.com/rohan/fastmcp-guard"
Documentation = "https://fastmcp-guard.readthedocs.io"
Repository = "https://github.com/rohan/fastmcp-guard"
Issues = "https://github.com/rohan/fastmcp-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_guard"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=fastmcp_guard --cov-report=term-missing"

[tool.coverage.run]
source = ["src/fastmcp_guard"]
